Game history revision